# moqm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: moqm.hpp
include/moqm/: classification.hpp  distance.hpp  indicators.hpp  point.hpp  representation.hpp
tests/: test_moqm.cpp
